Add buy ticket form

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,11 +6,16 @@ html, body {
   margin: 0;
   padding: 0;
   color: var(--color-primary);
+  font-size: 16px;
 }
 
-#app {
+#app,
+input,
+button {
   font-family: 'Poppins', sans-serif;
 }
+
+
 
 a {
   color: var(--color-secondary);
