--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -4,4 +4,6 @@
   --color-secondary: #1890ff;
   --color-secondary-hover: #40a9ff;
   --color-secondary-active: #096dd9;
+
+  --color-error: #ff4d4f
 }
