--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+@import 'form.scss';
 @import 'variables.scss';
 
 html, body {
@@ -9,13 +10,15 @@ html, body {
   font-size: 16px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 #app,
 input,
 button {
   font-family: 'Poppins', sans-serif;
 }
-
-
 
 a {
   color: var(--color-secondary);
